applications/assignmentRules/objects/DObj2__c.object
<CustomObject>
    <description>Test123</description>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>Phone</type>
    </fields>
    <label>DObj2</label>
    <nameField>
        <label>DObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DObj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>